--- a/trial.ipynb
+++ b/trial.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skipped because the air simulator can handle this"
+    "# Skipped because the air simulator can handle this. Will update later\t"
    ]
   },
   {
